--- a/News/Info.plist
+++ b/News/Info.plist
@@ -15,6 +15,7 @@
 		<string>SF-Compact-Display-Semibold.otf</string>
 		<string>SF-Compact-Display-Thin.otf</string>
 		<string>SF-Compact-Display-Ultralight.otf</string>
+		<string>PlayfairDisplay-Black.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
